# homfa-runner

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  README.md  conanfile.py  conanfile.txt  graph_info.json  table.html
.github/workflows/: graph-test.yaml
binls/: conanbuildinfo.txt  conaninfo.txt
graph-config/three-dfa/: config1.spec
input-files/: input1.txt
src/: CMakeLists.txt  graph.cpp  graph.hpp  main.cpp  utils.hpp
src/graph/: forward-graph.cpp  forward-graph.hpp  graph.cpp  graph.hpp  reverse-graph.cpp  reverse-graph.hpp  tfhe-util.hpp  utils.cpp  utils.hpp
test/: CMakeLists.txt  offline_test.cpp  plain_test.cpp
